[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypeline-processors-DavidRodriguezSoaresCUI"
version = "0.0.1"
authors = [
  { name="DavidRodriguezSoaresCUI", email="fireblaze904+pypeline-processors@gmail.com" },
]
description = "A collections of processors I wrote for the Pypeline project. Feel free to reuse them !"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [

]

[project.urls]
"Homepage" = "https://github.com/DavidRodriguezSoaresCUI/pypeline-processors"
"Bug Tracker" = "https://github.com/DavidRodriguezSoaresCUI/pypeline-processors/issues"

[project.optional-dependencies]
analyse = [
  "mypy",
  "bandit",
  "pylint",
  "flake8",
]
doc = [
  "furo>=2023",
  "Sphinx>=6.1.3",
]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=4.0.0",
]

[tool.setuptools.package-data]
pypeline-processors = ["py.typed"]
